# Bayesian_Phylo

./: .gitignore  CMakeLists.txt  Node.cpp  Node.hpp  README.md  RandomVariable.hpp  Tree.cpp  Tree.hpp  main.cpp
include/: Alignment.hpp  ConditionalLikelihood.hpp  DoubleMatrix.hpp  EvolutionaryModel.hpp  JC69.hpp  Node.hpp  TransitionProbability.hpp  Tree.hpp  TreeLikelihood.hpp  TreeModel.hpp
lib/lua-5.4.7/: CMakeLists.txt
lib/ncl/: Jamroot
lib/ncl/data/: unaligned.nex
lib/ncl/example/outdeg1count/: outdeg1count.cpp
lib/ncl/html/: BASICCMDLINE.html  MyAssumptionsBlock.html  MyCharactersBlock.html  MyDataBlock.html  MyNexusFileReader.html  MyNexusToken.html  MyToken.html  NStrCaseInsensitiveEquals.html  NStrCaseSensitiveEquals.html  NxsAssumptionsBlock.html  NxsBlock.html  NxsDataBlock.html  NxsDiscreteDatum.html  NxsDiscreteMatrix.html  NxsDistanceDatum.html  NxsDistancesBlock.html  NxsEmptyBlock.html  NxsException.html  NxsReader.html  NxsSetReader.html  NxsString.html  NxsStringEqual.html  NxsTaxaBlock.html  NxsTreesBlock.html  classes.html  contents.html  functions.html  index.html  roadmap.html  v2.0index.html
lib/ncl/html/v2.1/: footer.html
lib/ncl/ncl/: CMakeLists.txt
lib/ncl/test/NTSValidIn/: characters.nex  charsets.nex  linktest.nex  partitions.nex  paup_characters.nex  protein.nex  unaligned.nex
lib/ncl/test/NTSValidOut/: paup_characters.nex  protein.nex
res/: .gitignore  Test.lua
src/: AbstractDistribution.hpp  AbstractEvent.hpp  AbstractLikelihood.hpp  AbstractMove.hpp  AbstractParameter.hpp  AbstractPrior.hpp  Alignment.cpp  Alignment.hpp  CompoundDistribution.cpp  CompoundDistribution.hpp  ConditionalLikelihood.cpp  ConditionalLikelihood.hpp  DoubleMatrix.cpp  DoubleMatrix.hpp  DoubleParameter.cpp  DoubleParameter.hpp  EventManager.cpp  EventManager.hpp  EvolutionaryModel.cpp  ExponentialDistribution.cpp  ExponentialDistribution.hpp  FlatPrior.hpp  HillClimb.cpp  HillClimb.hpp  IterationTrackerEvent.hpp  JC69.cpp  JC69Matrix.cpp  JC69Matrix.hpp  Mcmc.cpp  Mcmc.hpp  McmcFileLogEvent.cpp  McmcFileLogEvent.hpp  McmcScreenLogEvent.cpp  McmcScreenLogEvent.hpp  MoveScaleBranch.cpp  MoveScaleBranch.hpp  MoveScaleDouble.cpp  MoveScaleDouble.hpp  MoveScheduler.cpp  MoveScheduler.hpp  (+30 more)
src/core/: Alignment.cpp  Alignment.hpp  RandomVariable.cpp  RandomVariable.hpp
src/events/: Event.hpp  EventManager.cpp  EventManager.hpp  FileLogEvent.cpp  FileLogEvent.hpp  IterationTrackerEvent.cpp  IterationTrackerEvent.hpp  McmcFileLogEvent.cpp  McmcFileLogEvent.hpp  McmcScreenLogEvent.cpp  McmcScreenLogEvent.hpp  ScreenLogEvent.cpp  ScreenLogEvent.hpp  TuneEvent.cpp  TuneEvent.hpp
src/modeling/: ModelNode.hpp  PosteriorNode.cpp  PosteriorNode.hpp
src/modeling/analysis/: HillClimb.cpp  HillClimb.hpp  Mcmc.cpp  Mcmc.hpp  PerturbedHillClimb.cpp  PerturbedHillClimb.hpp
src/modeling/likelihoods/: ConditionalLikelihood.cpp  ConditionalLikelihood.hpp  LikelihoodNode.hpp  PhyloCTMC.cpp  PhyloCTMC.hpp  TransitionProbability.cpp
src/modeling/parameters/: DoubleParameter.cpp  DoubleParameter.hpp
src/modeling/parameters/rates/: GTRMatrix.cpp  GTRMatrix.hpp  JC69Matrix.cpp  JC69Matrix.hpp  LGMatrix.cpp  LGMatrix.hpp  RateMatrix.hpp  RateParameter.cpp  RateParameter.hpp
src/modeling/parameters/trees/: Node.cpp  Node.hpp  TreeObject.cpp  TreeObject.hpp  TreeParameter.cpp  TreeParameter.hpp
src/modeling/priors/: ExponentialPrior.cpp  ExponentialPrior.hpp  GammaPrior.cpp  GammaPrior.hpp  NormalPrior.cpp  NormalPrior.hpp  PriorNode.hpp  TreePrior.cpp  TreePrior.hpp
src/moves/: Move.hpp  MoveScaleBranch.cpp  MoveScaleBranch.hpp  MoveScaleClade.cpp  MoveScaleClade.hpp  MoveScaleDouble.cpp  MoveScaleDouble.hpp  MoveScheduler.cpp  MoveScheduler.hpp  MoveSlideDouble.cpp  MoveSlideDouble.hpp  MoveTreeLocal.cpp  MoveTreeLocal.hpp  MoveTreeNNI.cpp  MoveTreeNNI.hpp
